--- a/Cory Clicker/Properties/Resources.resx
+++ b/Cory Clicker/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="Whitehouse" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Whitehouse.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="153085555815845295" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\153085555815845295.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
